# packages/backend/tsoa/swagger.json
@@ -71,6 +71,30 @@
 			},
 			"ColumnCreationRequest": {
 				"$ref": "#/components/schemas/Omit_Column.id-or-cards_"
+			},
+			"Pick_Card.Exclude_keyofCard.id__": {
+				"properties": {
+					"columnId": {
+						"type": "number",
+						"format": "double"
+					},
+					"description": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"columnId",
+					"description"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_Card.id_": {
+				"$ref": "#/components/schemas/Pick_Card.Exclude_keyofCard.id__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"CardCreationRequest": {
+				"$ref": "#/components/schemas/Omit_Card.id_"
 			}
 		},
 		"securitySchemes": {}
@@ -99,7 +123,7 @@
 						}
 					}
 				},
-				"description": "Retrieves a list of all users",
+				"description": "Retrieves a list of all columns",
 				"security": [],
 				"parameters": []
 			},
@@ -152,12 +176,98 @@
 						}
 					}
 				},
-				"description": "Retrieves user by userId",
+				"description": "Retrieves column by columnID",
 				"security": [],
 				"parameters": [
 					{
 						"in": "path",
 						"name": "columnId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/api/card": {
+			"get": {
+				"operationId": "GetCards",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/Card"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"description": "Retrieves a list of all cards",
+				"security": [],
+				"parameters": []
+			},
+			"post": {
+				"operationId": "CreateCard",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Card"
+								}
+							}
+						}
+					}
+				},
+				"description": "Create new card",
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CardCreationRequest"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/card/{cardId}": {
+			"get": {
+				"operationId": "GetCardById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/Card"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"description": "Retrieves card by cardID",
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "cardId",
 						"required": true,
 						"schema": {
 							"format": "double",
